src/test/resources/LO-2/InvalidPrograms/test_8.lo
// Mismatching operand types from methods declared after usage

bool main(){
  {
    return (integerMethod() > stringMethod());
  }
}

bool integerMethod() {
    {
        return false;
    }
}

String stringMethod() {
    {
        return "1";
    }
}